# spesecasa

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_bills.py  0003_richer_extraction.py  0004_semantic_index.py  0005_condo_units.py  0006_custom_categories.py  0007_members_no_access.py  0008_review_items.py  0009_payment_methods.py  0010_category_parent.py  0011_canonicalize_farmaci.py
app/: config.py  database.py  deps.py  enums.py  main.py
app/agent/: caching.py  runner.py  system_prompt.py  tools.py
app/api/: auth.py  bills.py  chat.py  documents.py  expenses.py  household.py  review.py  stats.py  storage_browser.py
app/models/: __init__.py  base.py  bill.py  category.py  document.py  expense.py  household.py  payment_method.py  property_unit.py  review.py  user.py
app/schemas/: auth.py  bill.py  category.py  chat.py  document.py  expense.py  payment_method.py  property_unit.py  review.py
app/services/: archive.py  bills.py  categories.py  embeddings.py  llm.py  orchestrator.py  resolvers.py  search.py  security.py  spreadsheets.py  stats.py  storage.py
app/static/: app.js  index.html  styles.css
scripts/: reset_password.py
tests/: test_analytics.py  test_archive.py  test_bills.py  test_categories.py  test_condo.py  test_extraction.py  test_farmaci.py  test_llm_retry.py  test_search.py  test_smoke.py  test_spreadsheets.py
