[project]
name = "spese-familiari"
version = "0.1.0"
description = "Gestione spese familiari multi-utente con archivio documenti e agente AI (ottica fiscale IT)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9",
    "anthropic>=0.39",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
